@@ -979,6 +979,7 @@ CORE_SRX_TABLE_COLUMN_After_Break=Pattern After
 CORE_SRX_RULES_LANG_GERMAN=German
 CORE_SRX_RULES_LANG_CATALAN=Catalan
 CORE_SRX_RULES_LANG_SPANISH=Spanish
+CORE_SRX_RULES_LANG_POLISH=Polish
 CORE_SRX_RULES_LANG_RUSSIAN=Russian
 CORE_SRX_RULES_LANG_JAPANESE=Japanese
 CORE_SRX_RULES_LANG_ENGLISH=English
