@@ -906,6 +906,7 @@ CORE_SRX_TABLE_COLUMN_After_Break=Masque apr\u00e8s
 CORE_SRX_RULES_LANG_GERMAN=Allemand
 CORE_SRX_RULES_LANG_CATALAN=Catalan
 CORE_SRX_RULES_LANG_SPANISH=Espagnol
+CORE_SRX_RULES_LANG_POLISH=Polonais
 CORE_SRX_RULES_LANG_RUSSIAN=Russe
 CORE_SRX_RULES_LANG_JAPANESE=Japonais
 CORE_SRX_RULES_LANG_ENGLISH=Anglais
